--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/main.js",
+    "dev": "nodemon",
+    "lint": "eslint ./src/**",
+    "lint:fix": "eslint ./src/** --fix",
+    "generate": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,7 +25,17 @@
   "homepage": "https://github.com/kicheese/bot_node#readme",
   "devDependencies": {
     "@types/node": "^18.0.6",
-    "tslog": "^3.3.3"
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.19",
+    "prettier": "^2.7.1",
+    "prisma": "^4.1.0",
+    "ts-node": "^10.9.1",
+    "tslog": "^3.3.3",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "@prisma/client": "^4.1.0",
