--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,7 @@
   "rules": {
     "@typescript-eslint/ban-types": "off",
     "@typescript-eslint/no-unused-vars": [
-      "warn"
+      "error"
     ],
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/explicit-function-return-type": [
